  raising an exception.
  Implement mysql_compression={0|1} option in DSN to disable/enable
  compression of client/server protocol. (Default off.)
  Implement mysql_client_found_rows={0|1} option in DSN to cause
  server to return rows-changed counts (0) or rows-matched counts (1)
  for statements that modify rows (mostly relevant for UPDATE).  (Default
  is rows-changed counts)
* 4-Mar-2006 Paul DuBois.
  Mysql.rb: Added state member value to DBI::DatabaseError exceptions for
  MySQL.  If mysql-ruby doesn't define a sqlstate method that provides the
  SQLSTATE value, state is set to nil (which is the default value anyway).
* 3-Mar-2006 Paul DuBois.
  Mysql.rb: Enabled use of mysql_read_default_file and
  mysql_read_default_group options in DSN for MySQL. These options
  enable option files to be read.  This change addresses bug #1951.

== 0.1.0 - 16-Feb-2006
* Project taken over by Kirk Haines, Francis Hwang, Patrick May and Daniel
  Berger as of January, 2006 (with the permission of Michael Neumann).
* Changelog style changed from diff style to summary style.  If you want diffs,
  you can watch the CVS commits at
	http://ruby-dbi.rubyforge.org/statcvs/commit_log.html.
* Old RUnit tests replaced with Test/Unit style tests.  
* Updated the README file to actually include useful documentation instead of
  pointing to an html document.
* Lots of internal file/directory reorganization and renaming - none of which
  should matter to you.
* General refactoring of the DBI::Row class including a bug fix where using
  multiple column references did not return the proper values.
* Corresponding test suite additions and changes for DBI::Row.
* Removed the dbrc.rb file from this distribution.  The dbi-dbrc package can
  be downloaded separately from the RAA or installed as a gem.
* Fixed bug #2793 (silent driver load failure).  This also covers patch #603.
* Fixed bug #1304 (comparing DBI::Timestamp with nil).