@@ -502,8 +502,15 @@ class Statement < DBI::BaseStatement
     return [] if @res_handle.nil?
 
     @res_handle.fetch_fields.each {|col| 
-      retval << {'name' => col.name, 'precision' => col.length - col.decimals, 'scale' => col.decimals,
-      '_type' => col.type, '_length' => col.length, '_max_length' => col.max_length, '_flags' => col.flags }
+      retval << {
+                  'name'        => col.name,
+                  'precision'   => col.length,
+                  'scale'       => col.decimals,
+                  '_type'       => col.type,
+                  '_length'     => col.length,
+                  '_max_length' => col.max_length,
+                  '_flags'      => col.flags
+                }
     }
     retval
   rescue MyError => err
